<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPS Parking</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lokacija">Lokacija</string>
    <string name="Plus">+</string>
    <string name="addVozilo">Ime vozila</string>
    <string name="addTablica">Registracija</string>
    <string name="addVozilo2">Dodaj vozilo</string>
    <string name="history">History</string>
    <string name="update">Update location</string>
    <string name="pay">Pay</string>
    <string name="zona">Zona</string>
    <string name="broj">Broj</string>
    <string name="title_activity_vozilo">VoziloActivity</string>
    <string name="Vehicle">Vehicle</string>
    <string name="Plate">Plate</string>
    <string name="City">City</string>
    <string name="Zone">Zone</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="hint_vehicle">Vehicle name</string>
    <string name="hint_registration">Registration</string>

</resources>
